NEXT:

e2factory-2.3.14p0
 * This release continues to be compatible with 2.3.14 plugins.
 * Unbreak --wc-mode and allow specifying multiple results, including
   intermediary dependencies. Beware this changes wc-mode buildid from "scratch"
   to "scratch-<buildid>".
 * Include revision ID in SVN sourceid calculation, fixing various issue with
   moving tags and branch mode. Also fix licenceid calculation for svn sources.
 * Fix error message for unknown chroot tarball extension.
 * Unbreak collect_project functionality with files in proj/init.

e2factory-2.3.14

e2factory-2.3.14rc1
 * Fix: Include result name in buildid calculation.
 * Fix: Removed hardcoded "base" chroot group in collect_project.
 * Fix: Backtrace due to missing module in git plugin during wc-mode.

e2factory-2.3.13

e2factory-2.3.13rc5
 * Bug fixes for showing the man-pages.
 * Manpage fixes.

e2factory-2.3.13rc4
 * interrupt_hook() bugfix.

e2factory-2.3.13rc3
 * Add git url protocol support.
 * Add http, https and svn url support to svn plugin.

e2factory-2.3.13rc2
 * Drop guessing the archive file type using magic numbers.
 * Add tar.xz support, requires tar and xz in the chroot.
 * Update templates configs, add formating and modelines.
 * Update various readme and documentation pointers.
 * Do not accidentally drop error messages from stat() and others.

e2factory-2.3.13rc1
 * Change source git URL construction to be compatible with assembla.
 * e2-cf can now handle source and result groups, plus better error checking.
 * Result and source names are better enforced, dots are only legal for groups.
 * --help now displays the manual page of the tool.
 * Add command e2-help to view project-specific help.
 * Fix error propagation from sub-makes when building e2factory.
 * Don't warn when hardlink optimization fails.
 * Default .gitignore when creating a project improved.
 * Many improvements and additions to the developer documentation.